--- a/Components/Titlebar/Titlebar.css
+++ b/Components/Titlebar/Titlebar.css
@@ -1,14 +1,65 @@
 	.Titlebar_title {
-		text-align: center;
-		color: #DFF0D8;
-		margin-top: 70px;
-		margin-bottom: 4%;
-		font-size: 70pt;
-		font-style: bold;
-		border-top: 2px #CCCCCC solid;
-		border-bottom: 2px #CCCCCC solid;
+		
+		background-color: #262626;
+		margin-right: 10%;
+		margin-left: -40%;
+		padding-top: 18%;
+		font-family: 'Roboto Condensed', sans-serif;
+		color:red;
+		padding-bottom: 1%;
 	}
 
+	.Titlebar_blackpanel{
+		background-color: black;
+		padding-bottom:150%;
+		margin-right: 10%;
+		padding-left: 40%;
+		margin-left: -22%;
+		margin-top: -4%;
+		padding-top: 10%;
+		color:white;
+		font-family: 'Roboto Condensed', sans-serif;
+		font-size: 20px;
+
+	}
+
+	.Titlebar_h4{
+		text-align: center;
+		color:#9D9B9C;
+		font-family: 'Krona One', sans-serif;
+		margin-left: 10%;
+		margin-top: -7%;
+	}
+
+/*SPOT*/
+	.Titlebar_h1white{
+		color:white;
+		float:right;
+		margin-top: -14%;
+		margin-right: 10%;
+
+	}
+
+/*BOOTCAMP*/
+	.Titlebar_h1red{
+		color:#B70002;
+		margin-left: 17%;
+
+	}
+
+	.Titlebar_redPanel{
+		background-color: #B70002;
+		padding-top:12%;
+		margin-right: -10%;
+		margin-left: -6%;
+		font-family: 'Roboto Condensed', sans-serif;
+		color:white;
+		font-size: 18px;
+
+
+	}
+
+	
 
 
 	
