--- a/Components/Pages/HomePage/homePage.css
+++ b/Components/Pages/HomePage/homePage.css
@@ -1,6 +1,47 @@
 #logo{
-	float: right;
+	z-index: 1; 
+	position: absolute; 
+	padding-top: 4%;
+    padding-right: 4%;
+    padding-left: 4%;
+	
 }
-#logoDiv {
-	background-color: red;
+#login{
+	z-index: 1; 
+	position: absolute; 
+	padding-top: 7%;
+    padding-right:3%;
+    padding-left: 7%;
+	right: 0px;
+
 }
+@media screen and (max-width: 767px){
+	#logo{
+		z-index: 1; 
+		position: static; 
+		top: 0px; 
+		left: 0px;
+		padding-top: 4%;
+    	padding-right: 4%;
+    	padding-left: 4%;
+    	padding-bottom: 0%;
+		max-width: 100%;
+		background-color: black;
+	}
+
+	#logoDiv{
+		background-color: black;
+	}
+
+	#login {
+    z-index: 1;
+    position: static;
+    padding-top: 0%; 
+    padding-right: 3%;
+    padding-bottom: 7%;
+    padding-left: 5%;
+    left: 0px; 
+    max-width: 60%;
+	}
+}
+
