--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,7 +11,7 @@ body{
 }
 .remove-all-margin-padding{
 	padding: 0 !important;
-   margin: 0 !important;
+   margin: 0;
 }
 #syllabus{
 	background-color: #8a8a8a;	
@@ -30,4 +30,12 @@ body{
 }
 
 
+@media screen and (max-width: 767px){
 
+.remove-all-margin-padding {
+    margin-top: -6px;
+    margin-right: -1px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+}
+}
