--- a/Components/NavBarLink/NavBarLink.css
+++ b/Components/NavBarLink/NavBarLink.css
@@ -1,3 +1,13 @@
+.navbar_linkText{
+	color: #ddd7d7;
+	font-size: 14px;
+	padding-left: 20px;
+}
+
+.imageDiv{
+	display: inline-flex;
+}
+
 .linkDiv{
-	
+	background-color: black;
 }
