title bar styling

--- a/Components/Navbar/Navbar.css
+++ b/Components/Navbar/Navbar.css
@@ -1,43 +1,5 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#navBar {
+	background-color: black;
+	height: 85vh;
+	width: 100%;
+}
