--- a/Components/LogoutBar/LogoutBar.css
+++ b/Components/LogoutBar/LogoutBar.css
@@ -4,7 +4,8 @@
 	padding-top: 1%;
 	background-color: #2f2f2f;
 	padding-right: 17px;
-	padding-bottom: 1%;
+	padding-bottom: 17px;
+	padding-left: 1%;
   	
 }
 #logoutBar_textDiv{
@@ -16,6 +17,7 @@
 #logoutBar_username, #logoutBar_logout {
 	color: black;
 	display: inline-block;
+
 }
 
 #logoutBar{
