--- a/Components/NavBarLink/NavBarLink.css
+++ b/Components/NavBarLink/NavBarLink.css
@@ -10,9 +10,5 @@
 
 .NavBarLink_linkDiv{
 	background-color: black;
-<<<<<<< HEAD
-	
-=======
-	text-align: center;
->>>>>>> 3320aab967ca85d46acba56c828355c840353da3
+	padding-top: 1%;
 }
