--- a/Components/NavBarLink/NavBarLink.css
+++ b/Components/NavBarLink/NavBarLink.css
@@ -12,3 +12,18 @@
 	background-color: black;
 	padding-top: 1%;
 }
+
+
+@media screen and (max-width: 768px){
+
+
+}
+
+
+@media screen and (max-width: 640px){
+
+
+	
+}
+
+
