--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -136,8 +136,30 @@
 
 #navBar {
 	background-color: black;
-	height: 85vh;
+	height: 84vh;
 	width: 70%;
+
+}
+
+
+
+
+
+
+
+
+@media screen and (max-width: 768px){
+
+
+
+}
+
+
+@media screen and (max-width: 640px){
+
+
+
+
 }.NavBarLink_linkText{
 	color: #ddd7d7;
 	font-size: 14px;
@@ -151,14 +173,34 @@
 .NavBarLink_linkDiv{
 	background-color: black;
 	padding-top: 1%;
-}#logoutBar_logo{
+}
+
+
+@media screen and (max-width: 768px){
+
+
+}
+
+
+@media screen and (max-width: 640px){
+
+
+	
+}
+
+
+#logoutBar_logo{
 	z-index: 1; 
 	position: absolute; 
-	padding-top: 1%;
 	background-color: #2f2f2f;
-	padding-right: 17px;
-	padding-bottom: 17px;
-	padding-left: 1%;
+	height:20%;
+	display:inline-block;
+	padding-left:3%;
+	padding-right: 3%;
+	padding-top:2%;
+	padding-bottom:5%; 
+
+
   	
 }
 #logoutBar_textDiv{
@@ -168,8 +210,9 @@
 	color: black;
 }
 #logoutBar_username, #logoutBar_logout {
-	color: black;
+	color: white;
 	display: inline-block;
+	padding-right: 4%	
 
 }
 
@@ -181,14 +224,15 @@
 
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 768px){
 	#logoutBar_logo{
 		z-index: 1; 
 		position: static; 
 		top: 0px; 
 		left: 0px;
 		max-width: 100%;
-		background-color: #ccc;
+		background-color: #2f2f2f;
+		max-height: 100%;
 	}
 
 	#logoutBar{
@@ -206,54 +250,18 @@
 }
 
 
-
-
-/*#logoutBar {
-	background-color: #ccc;
-	height: 15vh;
-}
-
-#logoutBar_textDiv {
-	z-index: 1; 
-	position: absolute; 
-	right: 0px;
-
-}
-
-#logoutBar_logo{
-	z-index: 1; 
-	position: absolute; 
-
-	
-}
-
-#logoutBar_username, #logoutBar_logout {
-	color: black;
-	display: inline-block;
-}
-
-@media screen and (max-width: 767px){
+@media screen and (max-width: 640px){
 	#logoutBar_logo{
-		z-index: 1; 
-		position: static; 
-		top: 0px; 
-		left: 0px;
-		max-width: 100%;
+		top:0;
+		left:0;
+		
+
+
+
 	}
 
-	#logoutBar{
-		background-color: #ccc;
-		margin-right: -1px;
-	}
 
-	#logoutBar_textDiv {
-    z-index: 1;
-    position: static;
-    left: 0px; 
-    max-width: 46%;
-	}
-}
-*/.tableHeader {
+}.tableHeader {
 	display: inline-block;
 	text-align: center;
 	color: black;
