--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -131,58 +131,18 @@
 }
 
 
-.attendancePageCol1 {
+.homeworkPageCol1 {
+	width: 10%;
+}
+.homeworkPageCol2 {
 	width: 40%;
 }
-.attendancePageCol2 {
-	width: 20%;
+.homeworkPageCol3 {
+	width: 25%;
 }
-.attendancePageCol3 {
-	width: 20%;
-}
-.attendancePageCol4 {
-	width: 20%;
-}
-
-/*.attendanceBackground{
-	background-image: url('../../assets/images/attendance_watermark.png')
-	
-
-}
-*/
-#navBar {
-	background-color: black;
-	height: 84vh;
-	width: 70%;
-<<<<<<< HEAD
-
-}
-
-
-
-
-
-
-
-
-@media screen and (max-width: 768px){
-
-
-
-}
-
-
-@media screen and (max-width: 640px){
-
-
-
-
+.homeworkPageCol4 {
+	width: 25%;
 }.NavBarLink_linkText{
-=======
-}
-
-.NavBarLink_linkText{
->>>>>>> 70a9f5a76141806d635bc7920ea7679b26eb29aa
 	color: #ddd7d7;
 	font-size: 14px;
 	padding-left: 23px;
@@ -199,7 +159,7 @@
 	padding-top: 1%;
 }
 
-<<<<<<< HEAD
+
 
 @media screen and (max-width: 768px){
 
@@ -214,98 +174,7 @@
 }
 
 
-=======
->>>>>>> 70a9f5a76141806d635bc7920ea7679b26eb29aa
-#logoutBar_logo{
-	z-index: 1; 
-	position: absolute; 
-	background-color: #2f2f2f;
-	height:20%;
-	display:inline-block;
-	padding-left:3%;
-	padding-right: 3%;
-	padding-top:2%;
-	padding-bottom:5%; 
-
-
-  	
-}
-#logoutBar_textDiv{
-	z-index: 1; 
-	position: absolute; 
-	right: 0px;
-	
-}
-#logoutBar_username, #logoutBar_logout {
-<<<<<<< HEAD
-	color: white;
-	display: inline-block;
-	padding-right: 4%	
-
-=======
-	font-family: 'Roboto Condensed', sans-serif;	
-	color: #fcfbfb;
-	display: inline-block;
-	padding: 20px;
->>>>>>> 70a9f5a76141806d635bc7920ea7679b26eb29aa
-}
-
-#logoutBar{
-	background-color: #343333;
-	position: static;
-	height: 19vh;
-
-
-}
-
-<<<<<<< HEAD
-@media screen and (max-width: 768px){
-=======
-
-
-@media screen and (max-width: 767px){
->>>>>>> 70a9f5a76141806d635bc7920ea7679b26eb29aa
-	#logoutBar_logo{
-		z-index: 1; 
-		position: static; 
-		top: 0px; 
-		left: 0px;
-		max-width: 100%;
-		background-color: #2f2f2f;
-		max-height: 100%;
-	}
-
-	#logoutBar{
-		background-color: #ccc;
-		height: 15vh;
-	}
-
-	#logoutBar_textDiv {
-    z-index: 1;
-    position: static;
-    left: 0px; 
-    max-width: 46%;
-    
-	}
-}
-
-
-@media screen and (max-width: 640px){
-	#logoutBar_logo{
-		top:0;
-		left:0;
-		
-
-<<<<<<< HEAD
-
-
-	}
-
-
-}.tableHeader {
-=======
 .tableHeader {
->>>>>>> 70a9f5a76141806d635bc7920ea7679b26eb29aa
 	display: inline-block;
 	text-align: center;
 	color: black;
@@ -328,18 +197,7 @@
 	font-size: 18px;
 	line-height: 36px;
 }
-.homeworkPageCol1 {
-	width: 10%;
-}
-.homeworkPageCol2 {
-	width: 40%;
-}
-.homeworkPageCol3 {
-	width: 25%;
-}
-.homeworkPageCol4 {
-	width: 25%;
-}.syllabusPageCol1 {
+.syllabusPageCol1 {
 	width: 55%;
 }
 
