--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -35,6 +35,10 @@
 }
 
 
+.LogoutBar_button{
+	display: none;
+}
+
 #logoutBar_logo{
 	padding-top: 1%;
 	padding-left: 1%;
@@ -65,6 +69,10 @@
 
 
 @media screen and (max-width: 767px){
+
+	.LogoutBar_button{
+		display: inline;
+	}
 
 	#logoutBar_logo{ 
 		max-height: 70%;
