--- a/Components/LogoutBar/LogoutBar.css
+++ b/Components/LogoutBar/LogoutBar.css
@@ -15,6 +15,7 @@
 #logoImg {
 	text-align: center;
 	max-width: 100%;
+	max-height: 100%;
 }
 #logoutBar_username, #logoutBar_logout {
 	font-family: 'Roboto Condensed', sans-serif;	
@@ -31,7 +32,7 @@
 }
 
 
-@media screen and (max-width: 767px){
+/*@media screen and (max-width: 767px){
 
 	.LogoutBar_button{
 		display: inline;
@@ -55,6 +56,6 @@
 		padding: 0px 20px;
 	}
 }
-
+*/
 
 
