--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -52,6 +52,7 @@
 #logoImg {
 	text-align: center;
 	max-width: 100%;
+	max-height: 100%;
 }
 #logoutBar_username, #logoutBar_logout {
 	font-family: 'Roboto Condensed', sans-serif;	
@@ -68,7 +69,7 @@
 }
 
 
-@media screen and (max-width: 767px){
+/*@media screen and (max-width: 767px){
 
 	.LogoutBar_button{
 		display: inline;
@@ -92,7 +93,7 @@
 		padding: 0px 20px;
 	}
 }
-
+*/
 
 
 #navBar {
