--- a/Components/LogoutBar/LogoutBar.css
+++ b/Components/LogoutBar/LogoutBar.css
@@ -3,11 +3,12 @@
 }
 
 #logoutBar_logo{
-	padding-top: 1%;
-	padding-left: 1%;
-	background-color: #343333;
-	text-align: center;
-	height: 15vh;
+	padding-top: 2%;
+    /* padding-left: 1%; */
+    background-color: #343333;
+    text-align: center;
+    height: 20vh;
+    padding-bottom: 2%;
 }
 #logoutBar_textDiv{
 	float: right;	
@@ -25,14 +26,14 @@
 }
 
 #logoutBar{
-	background-color: red;
-	position: static;
-	height: 15vh;
-	padding: 0px;
+	background-color: #de0303;
+    position: static;
+    height: 20vh;
+    padding: 0px;
 }
 
 
-/*@media screen and (max-width: 767px){
+@media screen and (max-width: 767px){
 
 	.LogoutBar_button{
 		display: inline;
@@ -56,6 +57,6 @@
 		padding: 0px 20px;
 	}
 }
-*/
+
 
 
