--- a/Components/LogoutBar/LogoutBar.css
+++ b/Components/LogoutBar/LogoutBar.css
@@ -9,14 +9,17 @@
     text-align: center;
     height: 20vh;
     padding-bottom: 2%;
+    border-bottom: 12px double #de0303;
+
 }
 #logoutBar_textDiv{
 	float: right;	
 }
 #logoImg {
 	text-align: center;
-	max-width: 100%;
+	max-width: 81%;
 	max-height: 100%;
+	
 }
 #logoutBar_username, #logoutBar_logout {
 	font-family: 'Roboto Condensed', sans-serif;	
@@ -30,6 +33,7 @@
     position: static;
     height: 20vh;
     padding: 0px;
+    border-bottom: 12px double #fff;
 }
 
 
