--- a/Components/Table/Table.css
+++ b/Components/Table/Table.css
@@ -1,12 +1,11 @@
 .tableHeader {
 	display: inline-block;
-	text-align: center;
-	color: black;
-	padding: 10px 0px;
-	margin-top: 5px;
-	margin-bottom: 0px;
-	overflow: hidden;
-	background-color: #ccc;
-	border-bottom: 3px;
-	border color: white;
+    text-align: center;
+    color: #b30303;
+    padding: 10px 0px;
+    margin-top: 5px;
+    margin-bottom: 0px;
+    overflow: hidden;
+    font-weight: bolder;
+    border-bottom: 1px solid #2d2d2d;
 }
