--- a/Components/Table/TableRow/TableRow.css
+++ b/Components/Table/TableRow/TableRow.css
@@ -1,11 +1,21 @@
 .tableData {
-	display: inline-block;
-	text-align: center;
-	color: black;
-	margin: 0px;
-	overflow: hidden;
-	background-color: #ccc;
-	height: 36px;
-	font-size: 18px;
-	line-height: 36px;
+	 display: inline-block;
+    text-align: center;
+    color: black;
+    margin: 0px;
+    overflow: hidden;
+    background-color: #f3f2f2;
+    height: 52px;
+    font-size: 15px;
+    line-height: 53px;
+
+}
+
+#hwButton{
+	color: #fff;
+    background-color: #de0303;
+    border-color: #868585;
+    font-size: small;
+    padding-top: 1px;
+    padding-bottom: 2px;
 }
