--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -2,28 +2,49 @@
 	background-color: black;
 	height: 80vh;
 	padding-top: 44px;
+	border-bottom-style: solid;
 }
-
 .NavBarLink_linkText{
 	color: #ddd7d7;
 	font-size: 14px;
 	padding-left: 23px;
+	text-decoration: none;
+	display:block;
 }
 
 .NavBarLink_imageDiv{
 	display: inline-flex;
-	padding-left: 19%;
-	padding-top: 7%;
+    padding-left: 27%;
+    padding-top: 4%;
+    width: 100%;
+    border-bottom: 1px solid #2d2d2d;
+    padding-bottom: 4%;
 }
 
-.NavBarLink_linkDiv{
+.NavBarLink_linkDiv {
 	background-color: black;
 }
 
 #hover{
 	display: inherit;
+	
+}
+a:hover { 
+    background-color: #343333;
+    width: 212PX;
+   
 }
 
+.NavBarLink_imageDiv:hover { 
+	background-color: #343333;
+    width: 100%;
+}
+
+
+
+a:visited{
+	color: red;
+}
 
 
 @media screen and (max-width: 768px){
@@ -50,14 +71,17 @@
     text-align: center;
     height: 20vh;
     padding-bottom: 2%;
+    border-bottom: 12px double #de0303;
+
 }
 #logoutBar_textDiv{
 	float: right;	
 }
 #logoImg {
 	text-align: center;
-	max-width: 100%;
+	max-width: 81%;
 	max-height: 100%;
+	
 }
 #logoutBar_username, #logoutBar_logout {
 	font-family: 'Roboto Condensed', sans-serif;	
@@ -71,6 +95,7 @@
     position: static;
     height: 20vh;
     padding: 0px;
+    border-bottom: 12px double #fff;
 }
 
 
@@ -105,8 +130,8 @@
 	background-color: black;
 	height: 80vh;
 	padding-top: 44px;
+	border-bottom-style: solid;
 }
-
 .hideBtn {
 	display: none;
 }
@@ -340,26 +365,35 @@
 */
 .tableHeader {
 	display: inline-block;
-	text-align: center;
-	color: black;
-	padding: 10px 0px;
-	margin-top: 5px;
-	margin-bottom: 0px;
-	overflow: hidden;
-	background-color: #ccc;
-	border-bottom: 3px;
-	border color: white;
+    text-align: center;
+    color: #b30303;
+    padding: 10px 0px;
+    margin-top: 5px;
+    margin-bottom: 0px;
+    overflow: hidden;
+    font-weight: bolder;
+    border-bottom: 1px solid #2d2d2d;
 }
 .tableData {
-	display: inline-block;
-	text-align: center;
-	color: black;
-	margin: 0px;
-	overflow: hidden;
-	background-color: #ccc;
-	height: 36px;
-	font-size: 18px;
-	line-height: 36px;
+	 display: inline-block;
+    text-align: center;
+    color: black;
+    margin: 0px;
+    overflow: hidden;
+    background-color: #f3f2f2;
+    height: 52px;
+    font-size: 15px;
+    line-height: 53px;
+
+}
+
+#hwButton{
+	color: #fff;
+    background-color: #de0303;
+    border-color: #868585;
+    font-size: small;
+    padding-top: 1px;
+    padding-bottom: 2px;
 }
 .homeworkPageCol1 {
 	width: 10%;
