--- a/Components/LoggedIn.css
+++ b/Components/LoggedIn.css
@@ -8,7 +8,7 @@
 		display: none;
 	}
 	.hideBtn {
-		display: inline-block;
+		display: table;
 	}
 
 }
@@ -77,6 +77,7 @@
 	background-color: #FAFAFA;
 	padding: 0px;
 	margin: 0px;
+	height: 20vh;
 }
 .close {
 	padding: 5px;
