--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -1,17 +1,12 @@
 #navBar {
-	background-color: black;
-<<<<<<< HEAD
-
-
+   background-color: black;
+   height: 80vh;
+   padding-top: 44px;
+   border-bottom-style: solid;
 }
 
 
-=======
-	height: 80vh;
-	padding-top: 44px;
-	border-bottom-style: solid;
-}
->>>>>>> cfd8638f99b6e2c65a719c311fb7aeedf3730282
+
 .NavBarLink_linkText{
 	color: #ddd7d7;
 	font-size: 14px;
@@ -135,11 +130,14 @@ a:visited{
 
 
 #navBar {
-	background-color: black;
-	height: 80vh;
-	padding-top: 44px;
-	border-bottom-style: solid;
+   background-color: black;
+   height: 80vh;
+   padding-top: 44px;
+   border-bottom-style: solid;
 }
+
+
+
 .hideBtn {
 	display: none;
 }
@@ -365,12 +363,14 @@ a:visited{
 	width: 20%;
 }
 
-/*.attendanceBackground{
-	background-image: url('../../assets/images/attendance_watermark.png')
+
+
+.attendanceBackground{
+	background-image: url('/assets/images/attendance_watermark.png');
 	
 
 }
-*/
+
 .tableHeader {
 	display: inline-block;
     text-align: center;
@@ -381,6 +381,7 @@ a:visited{
     overflow: hidden;
     font-weight: bolder;
     border-bottom: 1px solid #2d2d2d;
+  
 }
 .tableData {
 	 display: inline-block;
@@ -401,7 +402,7 @@ a:visited{
     border-color: #868585;
     font-size: small;
     padding-top: 1px;
-    padding-bottom: 2px;
+    padding-bottom: 3px;
 }
 .homeworkPageCol1 {
 	width: 10%;
@@ -414,7 +415,9 @@ a:visited{
 }
 .homeworkPageCol4 {
 	width: 25%;
-}.syllabusPageCol1 {
+}
+
+.syllabusPageCol1 {
 	width: 55%;
 }
 
