--- a/Components/NavBarLink/NavBarLink.css
+++ b/Components/NavBarLink/NavBarLink.css
@@ -15,8 +15,9 @@
     padding-bottom: 4%;
 }
 
-.NavBarLink_linkDiv {
+.NavBarLink_linkDiv:hover  {
 	background-color: black;
+	
 }
 
 #hover{
@@ -42,12 +43,17 @@ a:visited{
 
 
 @media screen and (max-width: 768px){
+	.NavBarLink_imageDiv:hover { 
+	background-color: #343333;
+    width: 100%;
+	}
 
 
 }
 
 
 @media screen and (max-width: 640px){
+
 
 
 	
