--- a/Components/LogoutBar/LogoutBar.css
+++ b/Components/LogoutBar/LogoutBar.css
@@ -33,7 +33,7 @@
     position: static;
     height: 20vh;
     padding: 0px;
-    border-bottom: 12px double #fff;
+    border-bottom: 12px double #343333;
 }
 
 
@@ -52,6 +52,7 @@
 	#logoutBar_logo{ 
 		max-height: 70%;
 		max-width: 70%;
+		border-bottom: none;
 
 	}
 
