--- a/Components/Table/TableRow/TableRow.css
+++ b/Components/Table/TableRow/TableRow.css
@@ -4,10 +4,10 @@
     color: black;
     margin: 0px;
     overflow: hidden;
-    background-color: #f3f2f2;
     height: 52px;
     font-size: 15px;
     line-height: 53px;
+    border-bottom: 1px solid #d2cfcf;
 
 }
 
