--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -104,7 +104,7 @@ a:visited{
     position: static;
     height: 20vh;
     padding: 0px;
-    border-bottom: 12px double #fff;
+    border-bottom: 12px double #343333;
 }
 
 
@@ -123,6 +123,7 @@ a:visited{
 	#logoutBar_logo{ 
 		max-height: 70%;
 		max-width: 70%;
+		border-bottom: none;
 
 	}
 
@@ -381,7 +382,7 @@ a:visited{
 
 .attendanceBackground{
 	background-image: url('/assets/images/attendance_watermark.png');
-	height: 100vh;
+	height: 80vh;
 
 }
 
@@ -403,10 +404,10 @@ a:visited{
     color: black;
     margin: 0px;
     overflow: hidden;
-    background-color: #f3f2f2;
     height: 52px;
     font-size: 15px;
     line-height: 53px;
+    border-bottom: 1px solid #d2cfcf;
 
 }
 
