--- a/Components/Pages/AttendancePage/AttendancePage.css
+++ b/Components/Pages/AttendancePage/AttendancePage.css
@@ -16,6 +16,7 @@
 .attendanceBackground{
 	background-image: url('/assets/images/attendance_watermark.png');
 	height: 80vh;
+	background-size: 100% auto;
 
 }
 
