--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -1,4 +1,4 @@
-#navBar {
+#navBarDiv {
    background-color: black;
    height: 80vh;
    padding-top: 44px;
@@ -142,7 +142,7 @@ a:visited{
 
 
 
-#navBar {
+#navBarDiv {
    background-color: black;
    height: 80vh;
    padding-top: 44px;
