--- a/Components/Pages/SyllabusPage/SyllabusPage.css
+++ b/Components/Pages/SyllabusPage/SyllabusPage.css
@@ -14,5 +14,10 @@
 	width: 15%;
 }
 #syllabus {
-	color: black;
+	color: #343333;
+	margin: 5%;
+	font-size: 22px;
+	background-color:#D2D5D6;
+	padding: 4%;
+	margin:0;
 }
