--- a/Components/LogoutBar/LogoutBar.css
+++ b/Components/LogoutBar/LogoutBar.css
@@ -17,8 +17,9 @@
 }
 #logoImg {
 	text-align: center;
-	max-width: 81%;
-	max-height: 100%;
+	max-width: 100%;
+    max-height: 100%;
+    margin-top: 22px;
 	
 }
 #logoutBar_username, #logoutBar_logout {
@@ -37,28 +38,30 @@
 }
 
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 768px){
 
 	.LogoutBar_button{
 		display: inline;
 
 	}
-
+	
+	
 	#logoImg {
-		display: none;
+		background-color: #3a3939;
+
 	}
 
 
 	#logoutBar_logo{ 
 		max-height: 70%;
-		max-width: 70%;
 		border-bottom: none;
+
 
 	}
 
 	#logoutBar{
 		background-color: #343333;
-		height: 15vh;
+		height: 22vh;
 	}
 
 	#logoutBar_textDiv {
@@ -67,6 +70,7 @@
 	}
 	#logoutBar_username, #logoutBar_logout {
 		padding: 0px 20px;
+		float: right;
 	}
 }
 
