--- a/Components/Pages/AttendancePage/AttendancePage.css
+++ b/Components/Pages/AttendancePage/AttendancePage.css
@@ -17,6 +17,8 @@
 	background-image: url('/assets/images/attendance_watermark.png');
 	height: 80vh;
 	background-size: 100% auto;
+	background-size: cover;
+    background-position: 50% 50%;
 
 }
 
