--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -87,8 +87,9 @@ a:visited{
 }
 #logoImg {
 	text-align: center;
-	max-width: 81%;
-	max-height: 100%;
+	max-width: 100%;
+    max-height: 100%;
+    margin-top: 22px;
 	
 }
 #logoutBar_username, #logoutBar_logout {
@@ -107,28 +108,30 @@ a:visited{
 }
 
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 768px){
 
 	.LogoutBar_button{
 		display: inline;
 
 	}
-
+	
+	
 	#logoImg {
-		display: none;
+		background-color: #3a3939;
+
 	}
 
 
 	#logoutBar_logo{ 
 		max-height: 70%;
-		max-width: 70%;
 		border-bottom: none;
+
 
 	}
 
 	#logoutBar{
 		background-color: #343333;
-		height: 15vh;
+		height: 22vh;
 	}
 
 	#logoutBar_textDiv {
@@ -137,6 +140,7 @@ a:visited{
 	}
 	#logoutBar_username, #logoutBar_logout {
 		padding: 0px 20px;
+		float: right;
 	}
 }
 
@@ -163,6 +167,7 @@ a:visited{
 	.hideBtn {
 		display: table;
 	}
+
 
 }
 /*******************************
@@ -227,15 +232,18 @@ a:visited{
 
 .modal-header {
 	border-bottom-color: #EEEEEE;
-	background-color: #FAFAFA;
+	background-color: #3a3939;;
 	padding: 0px;
 	margin: 0px;
-	height: 20vh;
+	height: 23vh;
 }
-.close {
-	padding: 5px;
-	background-color: white;
-	color: white;
+.modalHeaderWidth{
+	width: 100%;
+}
+#close {
+	float: right
+	
+	
 }.Panel_panelDiv{
 	height: 100vh;
   width: 100%;
@@ -309,7 +317,7 @@ a:visited{
 #HomePage_logo{
 	z-index: 1; 
 	position: absolute; 
-	padding-top: 4%;
+	padding-top: 6%;
     padding-right: 4%;
     padding-left: 4%;
 	
@@ -383,6 +391,8 @@ a:visited{
 	background-image: url('/assets/images/attendance_watermark.png');
 	height: 80vh;
 	background-size: 100% auto;
+	background-size: cover;
+    background-position: 50% 50%;
 
 }
 
