--- a/Components/Pages/SyllabusPage/SyllabusPage.css
+++ b/Components/Pages/SyllabusPage/SyllabusPage.css
@@ -17,7 +17,7 @@
 	color: #343333;
 	margin: 5%;
 	font-size: 22px;
-	background-color:#D2D5D6;
+	background:rgba(171,171,171,0.5);
 	padding: 4%;
 	margin:0;
 }
