--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -20,10 +20,7 @@
     padding-left: 27%;
     padding-top: 4%;
     width: 100%;
-<<<<<<< HEAD
-   
-=======
->>>>>>> d7cbb74677790ea3e7a580b915bf65923cedbf45
+     border-bottom: 1px solid #2d2d2d;
     padding-bottom: 4%;
 }
 
@@ -385,11 +382,6 @@ a:visited{
 .attendanceBackground{
 	background-image: url('/assets/images/attendance_watermark.png');
 	height: 80vh;
-<<<<<<< HEAD
-=======
-	background-size: 100% auto;
-
->>>>>>> d7cbb74677790ea3e7a580b915bf65923cedbf45
 }
 
 .tableHeader {
@@ -457,7 +449,7 @@ a:visited{
 	color: #343333;
 	margin: 5%;
 	font-size: 22px;
-	background-color:#D2D5D6;
+	background:rgba(171,171,171,0.5);
 	padding: 4%;
 	margin:0;
 }
