--- a/Components/Pages/AttendancePage/AttendancePage.css
+++ b/Components/Pages/AttendancePage/AttendancePage.css
@@ -14,6 +14,8 @@
 .attendanceBackground{
 	background-image: url('/assets/images/attendance_watermark.png');
 	height: 80vh;
-
+	background-size: 100% auto;
+	background-size: cover;
+    background-position: 50% 50%;
 }
 
