--- a/Components/LogoutBar/LogoutBar.css
+++ b/Components/LogoutBar/LogoutBar.css
@@ -13,21 +13,33 @@
 
 }
 #logoutBar_textDiv{
-	float: right;	
+	float: right;
+	margin-top: 31px;	
 }
 #logoImg {
 	text-align: center;
 	max-width: 100%;
     max-height: 100%;
     margin-top: 22px;
-	
+}
+
+#logoImg1{
+	margin-top: 25px;
+	max-width: 95%;
 }
 #logoutBar_username, #logoutBar_logout {
 	font-family: 'Roboto Condensed', sans-serif;	
 	color: #fcfbfb;
 	display: inline-block;
-	padding: 20px;
+	padding-left: 13px;
+	padding-right: 13px;
 }
+#logoutBar_logout {
+	border-left: 3px solid #343333;
+    padding-right: 12px;
+   
+}
+
 
 #logoutBar{
 	background-color: #de0303;
@@ -48,6 +60,8 @@
 	
 	#logoImg {
 		background-color: #3a3939;
+		margin-top: 14%;
+    	margin-left: 10%
 
 	}
 
@@ -70,9 +84,15 @@
 	}
 	#logoutBar_username, #logoutBar_logout {
 		padding: 0px 20px;
-		float: right;
+		
+
 	}
 }
 
+@media screen and (max-width: 353px){
+  
+  
+  
+}
 
 
