--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -395,6 +395,10 @@ a:visited{
 	background-size: cover;
     background-position: 50% 50%;
 }
+/*.attendancePageCol4.tableData{
+	
+	
+}*/
 
 .tableHeader {
 	display: inline-block;
