--- a/Components/Pages/SyllabusPage/SyllabusPage.css
+++ b/Components/Pages/SyllabusPage/SyllabusPage.css
@@ -1,4 +1,5 @@
 
+
 /*SUBJECT*/
 .syllabusPageCol1 {
 	width: 30%;
@@ -42,4 +43,21 @@
 }
 .syllabusPageCol1.tableData{
 	color:#d30000;
+}
+.syllabusText{
+	font-size: 16px;
+	color: dimgrey;
+}
+
+h3{
+	font-size: 17px;
+	font-weight: bold;
+	color: #424141;
+}
+
+
+@media screen and (max-width: 768px){
+	.syllabusBackground{
+		height: 80vh;
+	}
 }
