--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -1,6 +1,6 @@
 #navBarDiv {
    background-color: black;
-   height: 85vh;
+   height: 80vh;
    padding-top: 44px;
    border-bottom-style: solid;
 }
@@ -21,6 +21,10 @@
     padding-top: 4%;
     width: 100%;
     padding-bottom: 4%;
+}
+
+.NavBarLink_imageDiv:focus{
+	background-color: red;
 }
 
 .NavBarLink_linkDiv:hover  {
@@ -55,7 +59,7 @@ a:visited{
 	background-color: #343333;
     width: 100%;
 	}
-
+	
 
 }
 
@@ -135,13 +139,22 @@ a:visited{
 
 	}
 
+	#logoImg1 {
+		text-align: center;
+
+
+	}
+
 
 	#logoutBar_logo{ 
 		max-height: 70%;
 		border-bottom: none;
-
-
 	}
+
+	#logoutBar_logout{
+	    border-left: 3px solid #ea1616;
+	}
+	
 
 	#logoutBar{
 		background-color: #343333;
@@ -151,6 +164,7 @@ a:visited{
 	#logoutBar_textDiv {
 	    max-height: 30%;
 	    padding: 0px;
+	    margin-top: 0px;
 	}
 	#logoutBar_username, #logoutBar_logout {
 		padding: 0px 20px;
@@ -159,16 +173,9 @@ a:visited{
 	}
 }
 
-@media screen and (max-width: 353px){
-  
-  
-  
-}
-
-
 #navBarDiv {
    background-color: black;
-   height: 85vh;
+   height: 80vh;
    padding-top: 44px;
    border-bottom-style: solid;
 }
@@ -181,15 +188,24 @@ a:visited{
 
 
 @media screen and (max-width: 768px){
+	
+	#pageContent{
+		width: 100%;
+	}
+
 	.hideBar{
 		display: none;
 	}
-	.hideBtn {
+	.hideBtn{
 		display: table;
 		border: none;
 		background-color: transparent;
 	}
-
+	.hideBtn:focus {
+    	color: #333;
+    	background-color: #e6e6e6;
+    	border-color: #8c8c8c;
+    }
 
 }
 /*******************************
@@ -473,6 +489,7 @@ a:visited{
 }
 
 
+
 /*SUBJECT*/
 .syllabusPageCol1 {
 	width: 30%;
@@ -517,7 +534,23 @@ a:visited{
 .syllabusPageCol1.tableData{
 	color:#d30000;
 }
-.projectsPageCol1 {
+.syllabusText{
+	font-size: 16px;
+	color: dimgrey;
+}
+
+h3{
+	font-size: 17px;
+	font-weight: bold;
+	color: #424141;
+}
+
+
+@media screen and (max-width: 768px){
+	.syllabusBackground{
+		height: 80vh;
+	}
+}.projectsPageCol1 {
 	width: 10%;
 }
 .projectsPageCol2 {
