--- a/Components/Pages/FeedbackPage/FeedbackPage.css
+++ b/Components/Pages/FeedbackPage/FeedbackPage.css
@@ -4,6 +4,9 @@
 	background-size: 100% auto;
 	background-size: cover;
     background-position: 50% 50%;
+}
 
+.threeOrbs{
+	margin-left: 20%;
 
 }
