--- a/Components/Pages/HomeworkPage/HomeworkPage.css
+++ b/Components/Pages/HomeworkPage/HomeworkPage.css
@@ -10,4 +10,12 @@
 .homeworkPageCol4 {
 	width: 25%;
 }
+.homeworkPageBackground{
+	background-image: url('/assets/images/homework_watermark.png');
+	height: 80vh;
+	background-size: 100% auto;
+	background-size: cover;
+    background-position: 50% 50%;
+
+}
 
