--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -463,7 +463,13 @@ a:visited{
     color:#d30000;
     font-size:200%;
 }
-.homeworkPageCol1 {
+.careerPageBackground{
+	background-image: url('/assets/images/career_watermark.png');
+	height: 80vh;
+	background-size: 100% auto;
+	background-size: cover;
+    background-position: 50% 50%;
+}.homeworkPageCol1 {
 	width: 10%;
 }
 .homeworkPageCol2 {
@@ -474,6 +480,14 @@ a:visited{
 }
 .homeworkPageCol4 {
 	width: 25%;
+}
+.homeworkPageBackground{
+	background-image: url('/assets/images/homework_watermark.png');
+	height: 80vh;
+	background-size: 100% auto;
+	background-size: cover;
+    background-position: 50% 50%;
+
 }
 
 
@@ -521,7 +535,18 @@ a:visited{
 .syllabusPageCol1.tableData{
 	color:#d30000;
 }
-.projectsPageCol1 {
+.feedbackBackground{
+	background-image: url('/assets/images/feedback_watermark.png');
+	height: 80vh;
+	background-size: 100% auto;
+	background-size: cover;
+    background-position: 50% 50%;
+}
+
+.threeOrbs{
+	margin-left: 20%;
+
+}.projectsPageCol1 {
 	width: 10%;
 }
 .projectsPageCol2 {
@@ -532,5 +557,13 @@ a:visited{
 }
 .projectsPageCol4 {
 	width: 25%;
+}
+.projectPageBackground{
+	background-image: url('/assets/images/projects_watermark.png');
+	height: 80vh;
+	background-size: 100% auto;
+	background-size: cover;
+    background-position: 50% 50%;
+
 }
 /*# sourceMappingURL=webpackStyle.css.map*/
