--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -476,7 +476,9 @@ body{
 
   
 }
-.tableData {
+/*#wholeTable{
+    min-width: 350px;
+}*/.tableData {
 	 display: inline-block;
     text-align: center;
     color: black;
@@ -745,5 +747,8 @@ h3{
 		width: 19%;
 	}
 
+}#loginText {
+	text-align: center;
+	color: black;
 }
 /*# sourceMappingURL=webpackStyle.css.map*/
