--- a/Components/Pages/AttendancePage/AttendancePage.css
+++ b/Components/Pages/AttendancePage/AttendancePage.css
@@ -23,3 +23,17 @@
 	
 }*/
 
+@media screen and (max-width: 768px){
+	
+	
+	
+	.attendancePageCol1 {
+	width: 27%;
+	}	
+	.attendancePageCol2 {
+	width: 18%%;
+	}
+	.attendancePageCol3 {
+	width: 26%;
+	}
+}
