--- a/Components/NavBarLink/NavBarLink.css
+++ b/Components/NavBarLink/NavBarLink.css
@@ -14,6 +14,10 @@
     padding-bottom: 4%;
 }
 
+.NavBarLink_imageDiv:active{
+	background-color: red;
+}
+
 .NavBarLink_linkDiv:hover  {
 	background-color: black;
 
@@ -46,7 +50,7 @@ a:visited{
 	background-color: #343333;
     width: 100%;
 	}
-
+	
 
 }
 
