--- a/Components/Pages/HomeworkPage/HomeworkPage.css
+++ b/Components/Pages/HomeworkPage/HomeworkPage.css
@@ -19,3 +19,34 @@
 
 }
 
+.homeworkBackground{
+	background-image: url('/assets/images/homework_watermark.png');
+	height: 80vh;
+	background-size: 100% auto;
+	background-size: cover;
+    background-position: 50% 50%;
+}
+
+
+@media screen and (max-width: 768px){
+
+	.remove-all-margin-padding {
+    margin-top: 0px;
+    margin-right: -1px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+	}
+	.homeworkPageCol1 {
+	width: 24%;
+	}
+	.homeworkPageCol2 {
+		width: 22%;
+	}
+	.homeworkPageCol3 {
+		width: 26%;
+	}
+	.homeworkPageCol4 {
+		width: 19%;
+	}
+
+}
