--- a/public/assets/css/webpackStyle.css
+++ b/public/assets/css/webpackStyle.css
@@ -1,6 +1,6 @@
 #navBarDiv {
    background-color: black;
-   height: 85vh;
+   height: 80vh;
    padding-top: 44px;
    border-bottom-style: solid;
 }
@@ -21,6 +21,10 @@
     padding-top: 4%;
     width: 100%;
     padding-bottom: 4%;
+}
+
+.NavBarLink_imageDiv:active{
+	background-color: red;
 }
 
 .NavBarLink_linkDiv:hover  {
@@ -55,7 +59,7 @@ a:visited{
 	background-color: #343333;
     width: 100%;
 	}
-
+	
 
 }
 
@@ -68,7 +72,9 @@ a:visited{
 }
 
 
-.LogoutBar_button{
+body{
+	background-color: #ece9e9;
+}.LogoutBar_button{
 	display: none;
 }
 
@@ -135,13 +141,21 @@ a:visited{
 
 	}
 
+	#logoImg1 {
+		text-align: center;
+
+	}
+
 
 	#logoutBar_logo{ 
 		max-height: 70%;
 		border-bottom: none;
-
-
 	}
+
+	#logoutBar_logout{
+	    border-left: 3px solid #ea1616;
+	}
+	
 
 	#logoutBar{
 		background-color: #343333;
@@ -151,6 +165,7 @@ a:visited{
 	#logoutBar_textDiv {
 	    max-height: 30%;
 	    padding: 0px;
+	    margin-top: 0px;
 	}
 	#logoutBar_username, #logoutBar_logout {
 		padding: 0px 20px;
@@ -159,16 +174,9 @@ a:visited{
 	}
 }
 
-@media screen and (max-width: 353px){
-  
-  
-  
-}
-
-
 #navBarDiv {
    background-color: black;
-   height: 85vh;
+   height: 80vh;
    padding-top: 44px;
    border-bottom-style: solid;
 }
@@ -181,16 +189,33 @@ a:visited{
 
 
 @media screen and (max-width: 768px){
+	
+	#pageContent{
+		width: 100%;
+	}
+
 	.hideBar{
 		display: none;
 	}
-	.hideBtn {
+	.hideBtn{
 		display: table;
 		border: none;
 		background-color: transparent;
 	}
+	.hideBtn:focus {
+    	
+    	background-color: #333;
+    	border-color: red;
+    	outline: transparent;
+    }
 
-
+    .hideBtn:hover{
+    	/*background-color: red;*/
+    }
+   .hideBtn:active {
+    	color: red;
+    }
+   
 }
 /*******************************
 * MODAL AS LEFT/RIGHT SIDEBAR
@@ -257,7 +282,7 @@ a:visited{
 	background-color: #3a3939;;
 	padding: 0px;
 	margin: 0px;
-	height: 16vh;
+	height: 20vh;
 }
 .modalHeaderWidth{
 	width: 100%;
@@ -424,7 +449,20 @@ a:visited{
 	
 }*/
 
-.tableHeader {
+@media screen and (max-width: 768px){
+	
+	
+	
+	.attendancePageCol1 {
+	width: 27%;
+	}	
+	.attendancePageCol2 {
+	width: 18%%;
+	}
+	.attendancePageCol3 {
+	width: 26%;
+	}
+}.tableHeader {
 	display: inline-block;
     text-align: center;
     color: #d30000;
@@ -438,7 +476,9 @@ a:visited{
 
   
 }
-.tableData {
+/*#wholeTable{
+    min-width: 350px;
+}*/.tableData {
 	 display: inline-block;
     text-align: center;
     color: black;
@@ -448,6 +488,7 @@ a:visited{
     font-size: 15px;
     line-height: 53px;
     border-bottom: 1px solid #d2cfcf;
+    
 
 }
 
@@ -463,12 +504,42 @@ a:visited{
     color:#d30000;
     font-size:200%;
 }
-.careerPageBackground{
+
+.careerBackground{
 	background-image: url('/assets/images/career_watermark.png');
 	height: 80vh;
 	background-size: 100% auto;
 	background-size: cover;
     background-position: 50% 50%;
+}
+
+
+#div1 { 
+	background: #DDD; 
+	width: 50%;
+	height: 50%;
+	float: left;
+}
+#div2 {
+	background: #8b8b8b; 
+	width: 50%;
+	height: 50%;
+	float: left;
+}
+#div3 {
+	background: #343333; 
+	width: 50%;
+	height: 50%;
+	float: left;
+}
+#div4 {
+	background: #DDD; 
+	width: 50%;
+	height: 50%;
+	float: left;
+}
+body{
+	background-color: transparent;
 }.homeworkPageCol1 {
 	width: 10%;
 }
@@ -490,38 +561,72 @@ a:visited{
 
 }
 
+.homeworkBackground{
+	background-image: url('/assets/images/homework_watermark.png');
+	height: 80vh;
+	background-size: 100% auto;
+	background-size: cover;
+    background-position: 50% 50%;
+}
+
+
+@media screen and (max-width: 768px){
+
+	.remove-all-margin-padding {
+    margin-top: 0px;
+    margin-right: -1px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+	}
+	.homeworkPageCol1 {
+	width: 24%;
+	}
+	.homeworkPageCol2 {
+		width: 22%;
+	}
+	.homeworkPageCol3 {
+		width: 26%;
+	}
+	.homeworkPageCol4 {
+		width: 19%;
+	}
+
+}
 
 /*SUBJECT*/
 .syllabusPageCol1 {
 	width: 30%;
-	font-size: 150%;
+	font-size: 120%;
 
 }
 
 /*LESSON*/
 .syllabusPageCol2 {
 	width: 23%;
-	font-size: 150%;
+	font-size: 120%;
 }
 
 /*DATE*/
 .syllabusPageCol3{
 	width: 15%;
-	font-size: 150%;
+	font-size: 120%;
 }
 
 /*RECORDING*/
 .syllabusPageCol4 {
 	width: 22%;
-	font-size: 150%;
+	font-size: 120%;
 
 }
 #syllabus {
 	color: #343333;
 	margin: 5%;
 	font-size: 22px;
-	background:rgba(246,246,246,0.5);
-	padding: 4%;
+	/*background:rgba(246,246,246,0.5);*/
+	padding-top: 4%;
+    padding-right: 4%;
+    padding-bottom: 4%;
+    padding-left: 10%;
 	margin:0;
 }
 .syllabusBackground{
@@ -535,6 +640,55 @@ a:visited{
 .syllabusPageCol1.tableData{
 	color:#d30000;
 }
+.syllabusText{
+	font-size: 16px;
+	color: dimgrey;
+}
+
+h3{
+	font-size: 17px;
+	font-weight: bold;
+	color: #424141;
+}
+
+
+@media screen and (max-width: 768px){
+	.syllabusBackground{
+		height: 80vh;
+	}
+	.glyphicon {
+    color: #d30000;
+    font-size: 146%;
+    line-height: inherit;
+	}
+
+	.syllabusPageCol3{
+	width: 25%;
+	font-size: 110%;
+	}
+	.syllabusPageCol1 {
+	width: 27%;
+	font-size: 110%;
+	}	
+	.syllabusPageCol2 {
+	width: 20%;
+	font-size: 110%;
+	}
+	.syllabusPageCol4 {
+	width: 20%;
+	font-size: 110%;
+	}
+}
+
+
+
+.remove-all-margin-padding {
+    padding: 0 !important;
+    margin: 0;
+    /*overflow: auto;*/
+}
+
+
 .feedbackBackground{
 	background-image: url('/assets/images/feedback_watermark.png');
 	height: 80vh;
@@ -544,9 +698,13 @@ a:visited{
 }
 
 .threeOrbs{
-	margin-left: 20%;
+	margin-left: 17%;
+    max-width: 64%;
+}
 
-}.projectsPageCol1 {
+
+
+.projectsPageCol1 {
 	width: 10%;
 }
 .projectsPageCol2 {
@@ -558,12 +716,39 @@ a:visited{
 .projectsPageCol4 {
 	width: 25%;
 }
-.projectPageBackground{
+
+
+.projectsBackground{
 	background-image: url('/assets/images/projects_watermark.png');
 	height: 80vh;
 	background-size: 100% auto;
 	background-size: cover;
     background-position: 50% 50%;
+}
 
+@media screen and (max-width: 768px){
+
+	.remove-all-margin-padding {
+    margin-top: 0px;
+    margin-right: -1px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+	}
+	.projectsPageCol1 {
+	width: 24%;
+	}
+	.projectsPageCol2 {
+		width: 17%;
+	}
+	.projectsPageCol3 {
+		width: 35%;
+	}
+	.projectsPageCol4 {
+		width: 19%;
+	}
+
+}#loginText {
+	text-align: center;
+	color: black;
 }
 /*# sourceMappingURL=webpackStyle.css.map*/
