--- a/Components/Pages/SyllabusPage/SyllabusPage.css
+++ b/Components/Pages/SyllabusPage/SyllabusPage.css
@@ -59,6 +59,7 @@ h3{
 }
 
 
+
 @media screen and (max-width: 768px){
 	.syllabusBackground{
 		height: 80vh;
@@ -86,5 +87,26 @@ h3{
 	font-size: 110%;
 	}
 }
+
+@media screen and (max-width: 350px){
+	
+	.syllabusPageCol3{
+	width: 25%;
+	font-size: 86%;
+	}
+	.syllabusPageCol1 {
+	width: 27%;
+	font-size: 86%;
+	}	
+	.syllabusPageCol2 {
+	width: 20%;
+	font-size: 86%;
+	}
+	.syllabusPageCol4 {
+	width: 20%;
+	font-size: 86%;
+	}
+}
+
 
 
