--- a/Components/LoggedIn.css
+++ b/Components/LoggedIn.css
@@ -1,5 +1,6 @@
 .hideBtn {
 	display: none;
+
 }
 
 
@@ -22,10 +23,11 @@
     	background-color: #333;
     	border-color: red;
     	outline: transparent;
+    	background-color: transparent;
     }
 
     .hideBtn:hover{
-    	/*background-color: red;*/
+    	background-color: red;
     }
    .hideBtn:active {
     	color: red;
@@ -101,7 +103,7 @@
 }
 .modalHeaderWidth{
 	width: 100%;
-	background-color: #3a3939;
+	background-color: #343333;
 	border: none;
 }
 
